// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`git ignore resource e2e test: GitIgnore create 1`] = `
Object {
  "_message": "Added .cache to gitignore",
  "id": ".cache",
  "name": ".cache",
}
`;

exports[`git ignore resource e2e test: GitIgnore create plan 1`] = `
Object {
  "currentState": "node_modules
",
  "describe": "Add .cache to gitignore",
  "diff": "[31m- Original  - 1[39m
[32m+ Modified  + 1[39m

[2m  node_modules[22m
[31m-[39m
[32m+ .cache[39m",
  "newState": "node_modules
.cache",
}
`;

exports[`git ignore resource e2e test: GitIgnore destroy 1`] = `
Object {
  "id": ".cache",
  "name": ".cache",
}
`;

exports[`git ignore resource e2e test: GitIgnore update 1`] = `
Object {
  "_message": "Added .cache to gitignore",
  "id": ".cache",
  "name": ".cache",
}
`;

exports[`git ignore resource e2e test: GitIgnore update plan 1`] = `
Object {
  "currentState": "node_modules
.cache
",
  "describe": "Add .cache to gitignore",
  "diff": "",
  "newState": "node_modules
.cache
",
}
`;
